test_err.txt
cargo :    Compiling 
arb_config v0.1.0 (C:\
Users\olivi\Documents\
ArbHunger\crates\arb_c
onfig)
At line:1 char:1
+ cargo test 
--workspace 2>&1 | 
Out-File -Encoding 
utf8 test_err.txt
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (   Compili   
 ng ar...tes\arb_c    
onfig):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
   Compiling 
arb_providers v0.1.0 (
C:\Users\olivi\Documen
ts\ArbHunger\crates\ar
b_providers)
error[E0560]: struct 
`BaseProvider` has no 
field named `url`
  --> crates\arb_provi
ders\src\lib.rs:33:13
   |
33 |             url,
   |             ^^^ 
unknown field
   |
help: a field with a 
similar name exists
   |
33 |             _url,
   |             +

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:54:9
   |
54 |         std::env:
:set_var("QUICKNODE_WS
S_URL", 
"wss://qnode");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
 call to unsafe 
function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:55:9
   |
55 |         std::env:
:set_var("ALCHEMY_WSS_
URL", 
"wss://alchemy");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
 call to unsafe 
function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:56:9
   |
56 |         std::env:
:set_var("CHAIN_ID", 
"8453");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^ call to unsafe 
function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:57:9
   |
57 |         std::env:
:set_var("LOG_LEVEL", 
"debug");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^ call to 
unsafe function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:58:9
   |
58 |         std::env:
:set_var("METRICS_PORT
", "9091");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^ call to 
unsafe function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:59:9
   |
59 |         std::env:
:set_var("ENABLE_FLASH
BLOCKS", "true");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^ call 
to unsafe function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:60:9
   |
60 |         std::env:
:set_var("ENABLE_PENDI
NG_LOGS", "1");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^ call 
to unsafe function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

error[E0133]: call to 
unsafe function 
`set_var` is unsafe 
and requires unsafe 
block
  --> crates\arb_confi
g\src\lib.rs:61:9
   |
61 |         std::env:
:set_var("ENABLE_FAILO
VER", "false");
   |         ^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^ call 
to unsafe function
   |
   = note: consult 
the function's 
documentation for 
information on how to 
avoid undefined 
behavior

For more information 
about this error, try 
`rustc --explain 
E0133`.
error: could not 
compile `arb_config` 
(lib test) due to 8 
previous errors
warning: build 
failed, waiting for 
other jobs to 
finish...
For more information 
about this error, try 
`rustc --explain 
E0560`.
error: could not 
compile 
`arb_providers` (lib) 
due to 1 previous 
error
error: could not 
compile 
`arb_providers` (lib 
test) due to 1 
previous error
